# AclUnity

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: acl-cross-platform-build.yml
cmake/: android-toolchain.cmake  arm-gcc-toolchain.cmake
include/: acl_unity_defines.h  compression.h  decompression.h
src/: acl_unity_defines.cpp  compression.cpp  decompression.cpp
tests/: debug_main.cpp
